--- a/StarvedRock/.classpath
+++ b/StarvedRock/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="lib" path="C:/Programming devolpment/adt-bundle-windows-x86_64-20131030/sdk/extras/android/support/v13/android-support-v13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/josh/Downloads/nutiteq-3d-sdk-2.4.0.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
