--- a/StarvedRock/bin/AndroidManifest.xml
+++ b/StarvedRock/bin/AndroidManifest.xml
@@ -3,8 +3,11 @@
     package="com.example.starvedrock"
     android:versionCode="1"
     android:versionName="1.0" >
-    	
-	<permission android:name="com.example.starvedrock.permission.MAPS_RECEIVE" android:protectionLevel="signature"/>
+
+    <permission
+        android:name="com.example.starvedrock.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -16,7 +19,7 @@
         android:required="true" />
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="14"
         android:targetSdkVersion="21" />
 
     <application
@@ -24,21 +27,28 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <meta-data
-android:name="com.google.android.gms.version"
-android:value="@integer/google_play_services_version" />
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
         <meta-data
-           
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyDwbsLoDF0uikSHJ1IFtEubMqZKURY-fpY" />
 
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.starvedrock.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.starvedrock.POIActivity"
+            android:label="@string/title_activity_poi"
+            android:parentActivityName="MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="MainActivity" />
         </activity>
     </application>
 
