--- a/StarvedRock/.classpath
+++ b/StarvedRock/.classpath
@@ -2,10 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/josh/Downloads/nutiteq-3d-sdk-2.4.0.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="lib" path="C:/Programming devolpment/adt-bundle-windows-x86_64-20131030/sdk/extras/android/support/v13/android-support-v13.jar"/>
-	<classpathentry kind="lib" path="C:/Users/josh/Downloads/nutiteq-3d-sdk-2.4.0.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
