--- a/StarvedRock/AndroidManifest.xml
+++ b/StarvedRock/AndroidManifest.xml
@@ -25,7 +25,8 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:name="com.example.starvedrock.AppController">r
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
