--- a/StarvedRock/bin/AndroidManifest.xml
+++ b/StarvedRock/bin/AndroidManifest.xml
@@ -23,10 +23,11 @@
         android:targetSdkVersion="21" />
 
     <application
+        android:name="com.example.starvedrock.AppController"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:name="com.example.starvedrock.AppController">r
+        android:label="@string/app_name" >
+r
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -50,6 +51,10 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
+        </activity>
+        <activity
+            android:name="com.example.starvedrock.NotificationActivity"
+            android:label="@string/title_activity_notification" >
         </activity>
     </application>
 
