--- a/StarvedRock/.classpath
+++ b/StarvedRock/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="lib" path="C:/Programming devolpment/adt-bundle-windows-x86_64-20131030/sdk/extras/android/support/v13/android-support-v13.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/josh/git/volley/bin/volley.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
