--- a/StarvedRock/bin/AndroidManifest.xml
+++ b/StarvedRock/bin/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:required="true" />
 
     <uses-sdk
-        android:minSdkVersion="14"
+        android:minSdkVersion="19"
         android:targetSdkVersion="21" />
 
     <application
@@ -37,7 +37,8 @@ r
 
         <activity
             android:name="com.example.starvedrock.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -47,10 +48,12 @@ r
         <activity
             android:name="com.example.starvedrock.POIActivity"
             android:label="@string/title_activity_poi"
-            android:parentActivityName="MainActivity" >
+            android:parentActivityName="MainActivity" 
+             >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="MainActivity" />
+                android:value="MainActivity" 
+                android:screenOrientation="landscape"/>
         </activity>
         <activity
             android:name="com.example.starvedrock.NotificationActivity"
